--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 위 3개의 메타 태그는 *반드시* head 태그의 처음에 와야합니다; 어떤 다른 콘텐츠들은 반드시 이 태그들 *다음에* 와야 합니다 -->
 
     {% block head %}
-    <title>{% block title %}{% endblock %}</title>
     {% endblock %}
+    <title>{% block title %}{% endblock %}</title>
 
     <style type="text/css">
         body {
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #4263b7;
-        margin-left: auto;
-        margin-right: auto;
-      }
-      .sidebar {
-      position: fixed;
-      top: 51px;
-      bottom: 0;
-      left: 0;
-      z-index: 1000;
-      display: block;
-      padding: 20px;
-      overflow-x: hidden;
-      overflow-y: auto;
-      background-color: #f5f5f5;
-      border-right: 1px solid #eee;
-      }
-      .row {
-      margin-right: -15px;
-      margin-left: -15px;
-      }
-      .main {
-      padding-right: 40px;
-      padding-left: 40px;
-      }
-      .ck-editor__editable {
-        min-height: 500px !important;
-        max-width: 1200px;
-      }
+            padding-top: 40px;
+            padding-bottom: 40px;
+            background-color: #4263b7;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .btn{
+            margin-right: 10px;
+        }
+        .sidebar {
+            position: fixed;
+            top: 51px;
+            bottom: 0;
+            left: 0;
+            z-index: 1000;
+            display: block;
+            padding: 20px;
+            overflow-x: hidden;
+            overflow-y: auto;
+            background-color: #f5f5f5;
+            border-right: 1px solid #eee;
+        }
+        .date_box{
+            margin-right: 15px;
+            margin-left: 15px;
+        }
+        .row {
+            margin-right: 15px;
+            margin-left: 15px;
+        }
+
+        .main {
+            padding-right: 40px;
+            padding-left: 40px;
+        }
+
+        .ck-editor__editable {
+            min-height: 500px !important;
+            max-width: 1200px;
+        }
 
     </style>
     <!-- 부트스트랩 -->
@@ -51,47 +60,47 @@
     <!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
     <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <!------------------------------------------------------------------------------------------>
-  <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
- <ul class="navbar-nav">
-  <li class="navbar-item active">
-   <a class="nav-link" href="/"><h3>{% block body_title %}{% endblock %}</h3></a>
-   </li>
- </ul>
+</head>
+<!------------------------------------------------------------------------------------------>
+<body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="navbar-item active">
+            <a class="nav-link" href="/"><h3>{% block body_title %}{% endblock %}</h3></a>
+        </li>
+    </ul>
 </nav>
 
 <div class="container-fluid">
- <div class="row">
-  <div class="col-2" style="background-color: white;">
-   <ul class="nav nav-tabs flex-column">
-    <li class="nav-item active">
-     <a class="nav-link" href="/">
-      "생산관리 화면"
-      <span class="sr-only">(current)</span>
-     </a>
-    </li>
-    <li class="nav-item active">
-     <a class="nav-link" href="/shipment_main">
-      "출하관리 화면"
-     </a>
-    </li>
-   </ul>
-  </div>
-  <div class="col-10 col-offset-2">
-   <h1 class="page-header">{% block main_title %}{% endblock %}</h1>
-   <hr/>
-  {% block body %}
+    <div class="row">
+        <div class="col-2" style="background-color: white;">
+            <ul class="nav nav-tabs flex-column">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">
+                        "생산관리 화면"
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/shipment_main">
+                        "출하관리 화면"
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-10 col-offset-2">
+            <h1 class="page-header">{% block main_title %}{% endblock %}</h1>
+            <hr/>
+            {% block body %}
 
-  {% endblock %}
+            {% endblock %}
 
-    <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
-    <script src="../static/lib/bootstrap4.2.1/js/bootstrap.min.js"></script>
-  </body>
+            <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+            <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
+            <script src="../static/lib/bootstrap4.2.1/js/bootstrap.min.js"></script>
+</body>
 </html>
