--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -1,62 +1,64 @@
 {% extends 'main_base.html' %}
 {% block head %}
 <script>
- function winPop(url, opts) {
-  var popupName = opts.name || 'popup';
-  var options = '';
-  options += 'width=' + (opts.width ? opts.width : 200) + ', height=' + (opts.height ? opts.height : 200);
-  options += opts.left && opts.width ? ', left=' + opts.left : ', left=' + ( (screen.availWidth - opts.width) / 2);
-  options += opts.top && opts.height ? ', top=' + opts.top : ', top=' + ( (screen.availHeight - opts.height) / 2);
-  options += opts.scrollbars ? ', scrollbars=' + opts.scrollbars : ', scrollbars=no';
-  options += opts.resizable ? ', resizable=' + opts.resizable : ', resizable=no';
-  console.log(popupName);
-  window.open(url, popupName, options);
- }
- function hi(){
+    function winPop(url, opts) {
+        var popupName = opts.name || 'popup';
+        var options = '';
+        options += 'width=' + (opts.width ? opts.width : 200) + ', height=' + (opts.height ? opts.height : 200);
+        options += opts.left && opts.width ? ', left=' + opts.left : ', left=' + ((screen.availWidth - opts.width) / 2);
+        options += opts.top && opts.height ? ', top=' + opts.top : ', top=' + ((screen.availHeight - opts.height) / 2);
+        options += opts.scrollbars ? ', scrollbars=' + opts.scrollbars : ', scrollbars=no';
+        options += opts.resizable ? ', resizable=' + opts.resizable : ', resizable=no';
+        console.log(popupName);
+        window.open(url, popupName, options);
+    }
 
-    var checkbox = $("input[name=checkbox]:checked");
+    function hi() {
 
-    checkbox.each(function(i) {
+        var checkbox = $("input[name=checkbox]:checked");
+
+        checkbox.each(function (i) {
 
 
-        var result = $('input[name="checkbox"]').each(function () {
-            if (this.checked == true) {
-                //return $('input:checkbox[name="checkbox"]').val();
-                var a = Array;
-                a = this.value;
-                alert(a);
-            }
+            var result = $('input[name="checkbox"]').each(function () {
+                if (this.checked == true) {
+                    //return $('input:checkbox[name="checkbox"]').val();
+                    var a = Array;
+                    a = this.value;
+                    alert(a);
+                }
+            });
+
         });
+    }
 
-    });
- }
+    function change() {
+        var tmp = $('[name=checkYN[]]').prop('checked'); // 변수에 넣기
+        if (tmp == true) {
+            return $('[name=YN[]]').val('Y');
+        } else {
+            return $('[name=YN[]]').val('N');
+        }
+        alert(tmp);
 
- function change(){
-     var tmp = $('[name=checkYN[]]').prop('checked'); // 변수에 넣기
-     if(tmp == true) {
-         return $('[name=YN[]]').val('Y');
-     }else{
-         return $('[name=YN[]]').val('N');
-     }
-     alert(tmp);
+    }
 
-}
- $('input:checkbox[name="checkYN"]').each(function() {
+    $('input:checkbox[name="checkYN"]').each(function () {
 
-      this.checked = true; //checked 처리
+        this.checked = true; //checked 처리
 
-      if(this.checked){//checked 처리된 항목의 값
+        if (this.checked) {//checked 처리된 항목의 값
 
             alert(this.value);
 
-      }
+        }
 
-         if($('#checkYN').is(":checked")){
-             $("#YN").val("Y");
-         }else{
-             $("#YN").val("N");
-         }
- });
+        if ($('#checkYN').is(":checked")) {
+            $("#YN").val("Y");
+        } else {
+            $("#YN").val("N");
+        }
+    });
 
 </script>
 {% endblock %}
@@ -64,157 +66,159 @@
 {% block body_title %}Title{% endblock %}
 {% block main_title %}생산관리 화면{% endblock %}
 {% block body %}
-  <form class="form-inline" action="/search" method="POST">
-   <div class="row container-fluid">
-    <input type="date" name="startDate" value={{now_sdate}} class="col-2 btn-primary">
-    <div class="col-sm-1"></div>
-    <input type="date" name="endDate" value={{now_edate}} class="col-2 btn-primary ">
-    <button type="submit" class="btn col-1 btn-warning">검색</button>
-   </div>
-  </form>
-  <hr/>
-   <div class="row container-fluid">
+<form class="form-inline" action="/search" method="POST">
+    <div class="row container-fluid">
+        <input type="date" name="startDate" value={{now_sdate}} class="col-2 btn-primary">
+        <input type="date" name="endDate" value={{now_edate}} class="col-2 btn-primary date_box">
+        <button type="submit" class="btn col-1 btn-warning">검색</button>
+    </div>
+</form>
+<hr/>
+<div class="row container-fluid">
     <button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>
-    <button type="button" class="btn btn-warning col-2 offset-3" onclick="hi(); return false;">생산실적조회</button>
+    <button type="button" class="btn btn-warning col-2 offset-3" onclick="">생산실적조회</button>
     <!--<button type="button" class="btn btn-warning col-2 ">생산계획입력</button>-->
-    <a href="/insert_plan" class="btn btn-warning col-2" onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>
+    <a href="/insert_plan" class="btn btn-warning col-2"
+       onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>
     <button type="button" class="btn btn-warning col-1 " data-toggle="modal" data-target="#shipment_modal">출고</button>
     <!--<button type="button" class="btn btn-warning col-1 ">등록</button>-->
-     <!-- The Modal -->
-     <div class="modal" id="shipment_modal">
-      <div class="modal-dialog modal-lg">
-          <form class="form-inline" action="/shipment_data" method="POST" enctype=multipart/form-data >
-              <div class="modal-content">
-                  <!-- Modal Header -->
-                  <div class="modal-header">
-                      <h1 class="page-header">출 고</h1>
-                  </div>
-                  <!-- Modal Body -->
-                  <div class="modal-body">
-                      <div class="table-responsive">
-                          {% if rows[0] %}
-                          <table class="table table-striped table-bordered">
-                              <thead class="thead-dark">
-                              <tr>
-                                  <th>모델명</th>
-                                  <th>시리얼넘버</th>
-                                  <th>위치</th>
-                                  <th>출고지</th>
-                              </tr>
-                              </thead>
-                              <tbody>
-                              {% for row in rows %}
-                              <tr>
-                                <th><div class="checkbox">
-                                    <input type="checkbox" id="checkYN" name="checkYN" value="{{ row['key'] }}"/> {{ row["model"] }}
-                                    <input type="hidden" name="model" value="{{ row['model'] }}"/>
-                                    <input type="hidden" name="sn" value="{{ row['sn'] }}"/>
-                                    <input type="hidden" name="location" value="{{ row['location'] }}"/>
-                                    <input type="hidden" name=key value="{{ row['key'] }}"/>
-                                </div></th>
-                                <th> {{ row["sn"] }}</th>
-                                <th> {{ row["location"] }}</th>
-                                <th><input type="text" class="form-control" name="shipment"></th>
-                              </tr>
-                              {% endfor %}
-                              </tbody>
-                          </table>
-                          {% else %}
-                          <h3> No Notice in the CheckBox</h3>
-                          <input type="hidden" name="data_empty" value='{{ true }}'/>
-                          {% endif %}
-                      </div>
-                  </div>
-                  <!-- Modal Footer -->
-                  <div class="modal-footer">
-                      <button type="submit" class="btn btn-warning"  onclick="location.href='/shipment_data'">확 인</button>
-                  </div>
+    <!-- The Modal -->
+    <div class="modal fade" id="shipment_modal">
+        <div class="modal-dialog modal-lg">
+            <form class="form-inline" action="/shipment_data" method="POST" enctype=multipart/form-data>
+                <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h1 class="page-header">출 고</h1>
+                    </div>
+                    <!-- Modal Body -->
+                    <div class="modal-body">
+                        <div class="table-responsive">
+                            {% if shipment_modal_rows[0] %}
+                            <table class="table table-striped table-bordered">
+                                <thead class="thead-dark">
+                                <tr>
+                                    <th>모델명</th>
+                                    <th>시리얼넘버</th>
+                                    <th>위치</th>
+                                    <th>출고지</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for row in shipment_modal_rows %}
+                                <tr>
+                                    <th>
+                                        <div class="checkbox">
+                                            <input type="checkbox" id="checkYN" name="checkYN"
+                                                   value="{{ row['key'] }}"/> {{ row["model"] }}
+                                            <input type="hidden" name="model" value="{{ row['model'] }}"/>
+                                            <input type="hidden" name="sn" value="{{ row['sn'] }}"/>
+                                            <input type="hidden" name="location" value="{{ row['location'] }}"/>
+                                            <input type="hidden" name=key value="{{ row['key'] }}"/>
+                                        </div>
+                                    </th>
+                                    <th> {{ row["sn"] }}</th>
+                                    <th> {{ row["location"] }}</th>
+                                    <th><input type="text" class="form-control" name="shipment"></th>
+                                </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                            {% else %}
+                            <h3> No Notice in the CheckBox</h3>
+                            <input type="hidden" name="data_empty" value='{{ true }}'/>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <!-- Modal Footer -->
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-warning" onclick="location.href='/shipment_data'">확 인
+                        </button>
+                    </div>
 
-              </div>
-          </form>
-      </div>
-  </div>
-    <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal"> 등록 </button>
-     <!-- The Modal -->
-     <div class="modal" id="insert_modal">
-      <div class="modal-dialog modal-lg">
-          <form class="form-inline" action="/insert_data" method="POST" enctype=multipart/form-data >
-              <div class="modal-content">
-                  <!-- Modal Header -->
-                  <div class="modal-header">
-                      <h1 class="page-header">등 록</h1>
-                  </div>
-                  <!-- Modal Body -->
-                  <div class="modal-body">
-                      <div class="table-responsive">
-                          <table class="table table-striped table-bordered">
-                              <thead class="thead-dark">
-                              <tr>
-                                  <th>모델명</th>
-                                  <th>시리얼넘버</th>
-                                  <th>담당자</th>
-                              </tr>
-                              </thead>
-                              <tbody>
-                              <tr>
-                                  <th>
-                                      <select class="from-control" id="insert_model" name="model">
-                                          <option>Indy3</option>
-                                          <option>Indy5</option>
-                                          <option>Indy7</option>
-                                          <option>Opti</option>
-                                          <option>Step-pc2</option>
-                                      </select>
-                                  </th>
-                                  <th>
-                                      <input type="text" class="form-control" id="insert_sn" name="sn"></th>
-                                  <th>
-                                      <input type="text" class="form-control" id="insert_header" name="header"></th>
-                              </tr>
-                              </tbody>
-                          </table>
-                      </div>
-                  </div>
-                  <!-- Modal Footer -->
-                  <div class="modal-footer">
-                      <button type="submit" class="btn btn-warning"  onclick="location.href='/insert_data'">확 인</button>
-                  </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal"> 등록</button>
+    <!-- The Modal -->
+    <div class="modal fade" id="insert_modal">
+        <div class="modal-dialog modal-lg">
+            <form class="form-inline" action="/insert_data" method="POST" enctype=multipart/form-data>
+                <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h1 class="page-header">등 록</h1>
+                    </div>
+                    <!-- Modal Body -->
+                    <div class="modal-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered">
+                                <thead class="thead-dark">
+                                <tr>
+                                    <th>모델명</th>
+                                    <th>시리얼넘버</th>
+                                    <th>담당자</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th>
+                                        <select class="from-control" id="insert_model" name="model">
+                                            <option>Indy3</option>
+                                            <option>Indy5</option>
+                                            <option>Indy7</option>
+                                            <option>Opti</option>
+                                            <option>Step-pc2</option>
+                                        </select>
+                                    </th>
+                                    <th>
+                                        <input type="text" class="form-control" id="insert_sn" name="sn"></th>
+                                    <th>
+                                        <input type="text" class="form-control" id="insert_header" name="header"></th>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <!-- Modal Footer -->
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-warning" onclick="location.href='/insert_data'">확 인
+                        </button>
+                    </div>
 
-              </div>
-          </form>
-      </div>
-  </div>
-   </div>
-   <hr/>
-   <div class="table-responsive">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<hr/>
+<div class="table-responsive">
     {% if rows[0] %}
     <table class="table table-striped table-bordered">
-     <thead class="thead-dark">
-      <tr>
-       <th>모델명</th>
-       <th>시리얼 넘버</th>
-       <th>생산 주차</th>
-       <th>위치</th>
-       <th>품질검사 여부</th>
-      </tr>
-     </thead>
-     <tbody>
-      {% for row in rows %}
-      <tr>
-       <th> {{ row["model"] }}</th>
-       <th> {{ row["sn"] }}</th>
-       <th> {{ row["week"] }}</th>
-       <th> {{ row["location"] }}</th>
-       <th> {{ row["quality"] }}</th>
-      </tr>
-      {% endfor %}
-     </tbody>
+        <thead class="thead-dark">
+        <tr>
+            <th>모델명</th>
+            <th>시리얼 넘버</th>
+            <th>생산 주차</th>
+            <th>위치</th>
+            <th>품질검사 여부</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for row in rows %}
+        <tr>
+            <th> {{ row["model"] }}</th>
+            <th> {{ row["sn"] }}</th>
+            <th> {{ row["week"] }}</th>
+            <th> {{ row["location"] }}</th>
+            <th> {{ row["quality"] }}</th>
+        </tr>
+        {% endfor %}
+        </tbody>
     </table>
     {% else %}
     <h3> No Notice in the Database</h3>
     {% endif %}
-   </div>
-  </div>
- </div>
 </div>
 {% endblock %}
