--- a/FlaskServer/templates/shipment_main.html
+++ b/FlaskServer/templates/shipment_main.html
@@ -1,12 +1,114 @@
 {% extends 'main_base.html' %}
-{% block head %}
-{% endblock %}
+{% block head %}{% endblock %}
 {% block title %} 출하관리 페이지 {% endblock %}
 {% block body_title %}Title{% endblock %}
 {% block main_title %}출하관리 화면{% endblock %}
 {% block body %}
- <h1>777 Success :)</h1>
- <p>Happy Hello Wolrd !!.<p>
-  <p>{{ rows }}<p>
- <a href="{{ url_for('index') }}">go somewhere nice</a>
+<form class="form-inline" action="/search" method="POST">
+    <div class="row container-fluid">
+        <input type="date" name="startDate" value={{now_sdate}} class="col-2 btn-primary">
+        <input type="date" name="endDate" value={{now_edate}} class="col-2 btn-primary date_box">
+        <button type="submit" class="btn col-1 btn-warning">검색</button>
+    </div>
+</form>
+<hr/>
+<div class="row container-fluid">
+    <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal">계약정보 등록</button>
+    <!-- The Modal -->
+    <div class="modal fade" id="insert_modal">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <form class="form-inline" action="/insert_information" method="POST" enctype=multipart/form-data>
+                <div class="modal-content">
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h1 class="page-header">등 록</h1>
+                    </div>
+                    <!-- Modal Body -->
+                    <div class="modal-body">
+                        <div class="table-responsive">
+                            {% if rows[0] %}
+                            <table class="table table-striped table-bordered">
+                                <thead class="thead-dark">
+                                <tr>
+                                    <th>모델</th>
+                                    <th>시리얼넘버</th>
+                                    <th>출고일</th>
+                                    <th>계약번호</th>
+                                    <th>금액</th>
+                                    <th>납품일</th>
+                                    <th>예상수납일</th>
+                                    <th>실제수납일</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for row in rows %}
+                                <tr>
+                                    <th>{{ row["_model"] }}</th>
+                                    <th>{{ row["_sn"] }}</th>
+                                    <th><input type="date" name="outDate" value=''/></th>
+                                    <th><input type="text" name="contractNum"/></th>
+                                    <th><input type="text" name="sum"/></th>
+                                    <th><input type="date" name="deliveryDate" value='{{now_edate}}'/></th>
+                                    <th><input type="date" name="expectPayDate" value='{{now_edate}}'/></th>
+                                    <th><input type="date" name="realPayDate" value='{{now_edate}}'/></th>
+                                </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                            {% else %}
+                            <h3> No Notice in the Database</h3>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <!-- Modal Footer -->
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-warning" onclick="location.href='/insert_information'">확 인
+                        </button>
+                    </div>
+
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<hr/>
+<div class="table-responsive">
+    {% if rows[0] %}
+    <table class="table table-striped table-bordered">
+        <thead class="thead-dark">
+        <tr>
+            <th>모델</th>
+            <th>시리얼 넘버</th>
+            <th>제작일</th>
+            <th>출고일</th>
+            <th>업체</th>
+            <th>계약번호</th>
+            <th>금액</th>
+            <th>납품일</th>
+            <th>예상 수납일</th>
+            <th>실제 수납일</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for row in rows %}
+        <tr>
+            <th> {{ row["_model"] }}</th>
+            <th> {{ row["_sn"] }}</th>
+            <th> {{ row["_week"] }}</th>
+            <th> {{ row["_outDate"] }}</th>
+            <th> {{ row["_shipment"] }}</th>
+            <th> {{ row["_contractNum"] }}</th>
+            <th> {{ row["_sum"] }}</th>
+            <th> {{ row["_deliveryDate"] }}</th>
+            <th> {{ row["_expectPayDate"] }}</th>
+            <th> {{ row["_realPayDate"] }}</th>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    {% else %}
+    <h3> No Notice in the Database</h3>
+    {% endif %}
+</div>
+
 {% endblock %}
